--- a/src/style/_base.scss
+++ b/src/style/_base.scss
@@ -51,7 +51,7 @@ textarea, input, select {
   transition: 350ms all;
 
   &:hover {
-    background: $color-button-focus;
+    background: $color-input-focus;
     color: $color-black;
   }
 
