--- a/src/components/student-data-form/student-data-form.scss
+++ b/src/components/student-data-form/student-data-form.scss
@@ -53,7 +53,7 @@
 
 .cancelBtn {
   background: $color-white;
-  display: inline;
+  color: $color-error;
   box-shadow: 0px 0px 3px black;
   border-radius: 2em;
   margin-left: 10px;
