--- a/src/components/point-tracker-form/point-tracker-form.scss
+++ b/src/components/point-tracker-form/point-tracker-form.scss
@@ -16,9 +16,8 @@
   padding: 5px;
 
     select, input {
-      background-color: $color-input-focus;
+      background-color: $gray;
       display: inline-block;
-      // border: 1px solid $color-brand-blue;
       width: 300px;
       height: 3em;
       padding: 10px;
