--- a/src/components/point-tracker-form/point-tracker-form.scss
+++ b/src/components/point-tracker-form/point-tracker-form.scss
@@ -9,7 +9,7 @@
     transform: translateX(-50%);
     box-shadow: 0 0 12px rgba(0,0,0, 0.3);
 
-    .container, .col-md-12, .col-md-6 {
+    .container, .col-md-12, .col-md-6, .col-md-4 {
       padding: 0 !important;
     }
 
