--- a/src/components/mentor-content/_mentor-content.scss
+++ b/src/components/mentor-content/_mentor-content.scss
@@ -29,7 +29,7 @@
   font-size: 12px;
   font-weight: 600;
   text-transform: uppercase;
-  color: white; !important;
+  color: white !important;
   padding: 4px 16px;
   float: right;
   margin-top: -4px;
