color updates to mentor content

--- a/src/components/mentor-content/_mentor-content.scss
+++ b/src/components/mentor-content/_mentor-content.scss
@@ -71,12 +71,12 @@
 
   .title {
     text-transform: uppercase;
-    color: #D8D8D8;
+    color: #A9A9A9;
     font-weight: 600;
   }
 
   .label {
-    color: #D8D8D8;
+    color:black;
     font-weight: 600;
   }
 
