--- a/src/components/side-bar/_side-bar.scss
+++ b/src/components/side-bar/_side-bar.scss
@@ -65,7 +65,7 @@
 
 .sidebar-heading {
   text-transform: uppercase;
-  color: #D8D8D8 !important;
+  color: #A9A9A9 !important;
   font-weight: 600;
   display: inline !important;
 }
