revert button styling

--- a/src/components/mentor-content/_mentor-content.scss
+++ b/src/components/mentor-content/_mentor-content.scss
@@ -21,22 +21,20 @@
 }
 
 .linkToPT {
-  background-color: $color-button-green;
-  box-shadow: 0px 0px 3px black;
-  border: none;
-  border-radius: .3em;
-  font-family: $font-primary;
-  font-size: 12px;
   font-weight: 600;
-  text-transform: uppercase;
+  background-color: #A9C94C;
   color: white;
+  text-transform: uppercase;
   padding: 4px 16px;
-  float: right;
+  border-radius: 20px;
+  display: initial;
   margin-top: -4px;
   margin-right: 20px;
+  line-height: 18px;
+  float: right;
 
   &:hover {
-    background-color: $color-button-active;
+    background-color: #9eb757;
   }
 }
 
