--- a/src/components/admin-table/admin-table.scss
+++ b/src/components/admin-table/admin-table.scss
@@ -17,7 +17,7 @@ p.infoText {
 .react-grid-Container {
   position: relative;
   top: 3.5em;
-  max-width: 1366px;
+  width: auto; // this must be auto, not 1366px, so that it can resize to the viewer's window
   margin: auto !important;
 
   .rdg-cell-expand {
@@ -33,9 +33,8 @@ p.infoText {
 
   .react-grid-Toolbar {
     border-color: none;
-    height: 100px;
   }
-
+  
   .react-grid-Toolbar .btn {
     font-size: 12px;
     border-color: none;
