--- a/src/components/connection-modal/connection-modal.scss
+++ b/src/components/connection-modal/connection-modal.scss
@@ -10,6 +10,19 @@
   box-shadow: 0 0 12px rgba(0,0,0, 0.3) !important;
   margin-top: 22vh !important;
 
+  .modal-backdrop {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: #333;
+    opacity: 0.6;
+    width: 100%;
+    height: 100%;
+    z-index: 1040;
+  }
+
   .modal-content {
     border: none;
   }
@@ -20,6 +33,10 @@
 
   .modal-header {
     padding: 0;
+  }
+
+  .modal-transition {
+    transition: all 0.4s ease;
   }
 
   &.panel {
@@ -47,5 +64,17 @@
     line-height: 11px;
     font-size: 3em;
     margin-bottom: 0;
+  }
+
+  .btn-secondary {
+    background-color: $color-brand-green;
+    border: none;
+
+    &:hover {
+      background-color: white;
+      color: $color-brand-green;
+      font-weight: 600;
+      border: 0.5px solid $color-brand-green;
+    }
   }
 }
