--- a/src/components/app/app.scss
+++ b/src/components/app/app.scss
@@ -12,3 +12,7 @@ svg > path {
   background-color: #E9E9E9;
   height: 100vh;
 }
+
+.modal-backdrop {
+  background-color: rgba(0,0,0,0.6) !important;
+}
