hover over filter expands

--- a/src/components/admin-table/admin-table.scss
+++ b/src/components/admin-table/admin-table.scss
@@ -667,3 +667,109 @@ p.infoText {
   border-radius: 0.5em;
   margin-right: 1em;
 }
+
+
+div.react-grid-HeaderCell .input-sm {
+    height: 30px;
+    padding: 5px 10px;
+    font-size: 12px;
+    line-height: 1.5;
+    border-radius: 3px;
+    max-width : 100%;
+    border : 1px solid #ddd;
+}
+
+div.react-grid-HeaderCell:hover
+{
+  z-index:9999;
+  overflow:visible;
+
+  .Select-placeholder {
+    line-height: 30px;
+    margin-left: 8px;
+  }
+
+  input {
+    background-color: white;
+  }
+}
+
+div.react-grid-HeaderCell:hover input:not(.Select-input)
+{
+  max-width: 250px;
+  width: 250px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+div.react-grid-HeaderCell div.input-sm
+{
+  display : none;
+}
+
+div.react-grid-HeaderCell:hover .Select div.Select-Value
+{
+  clear:both;
+}
+
+div.react-grid-HeaderCell .Select-control
+{
+    width: 100%;
+}
+
+div.react-grid-HeaderCell:hover .Select .Select-control,
+div.react-grid-HeaderCell:hover .Select .Select-menu-outer
+{
+    width: max-content;
+    min-width: 250px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+div.react-grid-HeaderCell:hover .Select .Select-control .Select-value
+{
+    float: left;
+    clear: left;
+    margin-right : 20px;
+}
+
+div.react-grid-HeaderCell:hover .Select .Select-multi-value-wrapper
+{
+    padding : 5px;
+    padding-top : 40px;
+}
+
+div.react-grid-HeaderCell:hover .Select div.Select-input
+{
+    position : absolute;
+    left : 0;
+    width:max-content;
+    min-width : 220px;
+    margin-top : -35px;
+    margin-right : 20px;
+    margin-left: 4px;
+    border : 1px solid #ddd;
+    padding-right: 5px;
+}
+
+div.react-grid-HeaderCell:hover .Select--multi .Select-arrow-zone,
+div.react-grid-HeaderCell:hover .Select--multi .Select-clear-zone
+{
+    margin-left: 5px;
+    position : absolute;
+}
+
+div.react-grid-HeaderCell:hover .Select--multi .Select-arrow-zone
+{
+  right : -3px;
+  top : 7px;
+}
+
+div.react-grid-HeaderCell:hover .Select--multi .Select-clear-zone
+{
+  right : 3px;
+  bottom : 3px;
+}
+
+div.react-grid-HeaderCell:hover .Select--multi .Select-control .Select-value
+{
+  max-height : 22px;
+}
