--- a/src/components/save-table-modal/save-table-modal.scss
+++ b/src/components/save-table-modal/save-table-modal.scss
@@ -70,6 +70,20 @@
   .table {
     margin: 0.8em 0 2.5em 0;
   }
+
+  .red-circle {
+    display: inline-grid;
+    text-align: center;
+    margin: 0px 8px;
+    background-color: #b13636;
+    padding: 8px;
+    height: 24px;
+    width: 24px;
+    font-weight: 600;
+    color: white;
+    border-radius: 50%;
+    line-height: 8px;
+  }
 }
 
 // .save-table {
