communication styling and width fix

--- a/src/components/point-tracker-form/point-tracker-form.scss
+++ b/src/components/point-tracker-form/point-tracker-form.scss
@@ -82,30 +82,6 @@ select {
   vertical-align: middle;
 }
 
-.comm-table {
-  table{
-    border: 1px solid black;
-    border-radius: 3px;
-    -webkit-border-radius: 3px;
-    table-layout: fixed;
-  }
-
-  th, td {
-    border: 1px solid black;
-    padding: 4px 15px;
-  }
-
-  th {
-    font-weight: bold;
-    text-align: center;
-  }
-
-  .comm-table-header {
-    background-color: lightgrey;
-  }
-}
-
-
 .points-tracker {
 
     h2 {
@@ -165,4 +141,14 @@ textarea {
 .column {
   bottom: -1.2em;
   position: relative;
+}
+
+.table {
+  th {
+    width: 200px;
+  }
+
+  textarea {
+    width: 100%;
+  }
 }
