updates button styling on pt; deletes comm-table as a component, and more

--- a/src/components/point-tracker-summary/point-tracker-summary.scss
+++ b/src/components/point-tracker-summary/point-tracker-summary.scss
@@ -69,6 +69,18 @@
       }
     }
   }
+
+  .btn-secondary {
+    background-color: $color-brand-green;
+    font-size: 12px;
+    font-weight: 600;
+    border: 0.5px solid $color-brand-green !important;
+  
+    &:hover {
+      background-color: white;
+      color: $color-brand-green;
+    }
+  }
 }
 
 .fade:not(.show) {
