--- a/src/components/point-tracker-form/point-tracker-form.scss
+++ b/src/components/point-tracker-form/point-tracker-form.scss
@@ -118,9 +118,10 @@ select {
         border: 1px solid $color-brand-green;
       }
 
-      &:visited {
-        background: $color-button-active;
-    }
+      &:active {
+        background: $color-brand-green;
+        color: white;
+      }
   }
 
   .synopsis {
