--- a/src/components/admin-sidebar/_admin-sidebar.scss
+++ b/src/components/admin-sidebar/_admin-sidebar.scss
@@ -45,6 +45,6 @@
 
 .sidebar-heading {
   text-transform: uppercase;
-  color: #D8D8D8 !important;
+  color: #A9A9A9 !important;
   font-weight: 600;
 }
