--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -1,7 +1,7 @@
 @import '../../style/vars';
 
 .header {
-  background-color: #4C96C9;
+  background-color: #59AACE;
   position: fixed;
   top: 0;
   width: 100%;
@@ -14,7 +14,7 @@
   position: fixed !important;
   width: 100%;
   max-width: 1366px;
-  background-color: #4C96C9;
+  background-color: #59AACE;
   z-index: 1;
   margin: auto;
   clear: both;
