--- a/src/components/admin-table/admin-table.scss
+++ b/src/components/admin-table/admin-table.scss
@@ -23,6 +23,7 @@ p.infoText {
   top: 3.5em;
   max-width: auto;
   margin: auto !important;
+  padding-bottom: 20px !important;
 
   .rdg-cell-expand {
     top: 0px;
