max width of admin table

--- a/src/components/admin-table/admin-table.scss
+++ b/src/components/admin-table/admin-table.scss
@@ -21,7 +21,7 @@ p.infoText {
 .react-grid-Container {
   position: relative;
   top: 3.5em;
-  max-width: auto;
+  max-width: 1366px;
   margin: auto !important;
   padding-bottom: 20px !important;
 
