admin pick student with PT modal popup

--- a/src/components/mentor-content/_mentor-content.scss
+++ b/src/components/mentor-content/_mentor-content.scss
@@ -1,5 +1,9 @@
 @import '../../style/vars';
 
+.content-panel {
+  overflow: inherit !important;
+}
+
 .panel {
     background-color: white;
     border-radius: 6px;
