admin pick student styling

--- a/src/components/mentor-content/_mentor-content.scss
+++ b/src/components/mentor-content/_mentor-content.scss
@@ -4,6 +4,10 @@
   overflow: inherit !important;
 }
 
+.container {
+  padding-left: 10px !important;
+}
+
 .panel {
     background-color: white;
     border-radius: 6px;
